Working towards mouseover jumping

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -15,8 +15,8 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="SquareBlinkyDancer">add a square blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="ExpandoDancer">add an expando dancer</a>
-         </div>
-
+      <a href="#" class="lineUpButton">Line Up!</a>
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
