Implement working jump on hover

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -9,7 +9,7 @@
     <script src="src/squareBlinkyDancer.js"></script>
     <script src="src/expandoDancer.js"></script>
   </head>
-  <body>
+  <body df-type="fast">
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
